# AmmoDetectorCxx

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
nlohmann/: json.hpp
work_history/сats_and_dogs/: main.cpp
